--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- TODO: add favicon -->
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Pod Planet</title>
   </head>
   <body>
     <div id="root"></div>
